# sunone_aimbot_cpp

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  sunone_aimbot_2.sln  sunone_aimbot_cpp.sln  sunone_aimbot_cpp.vcxproj
capture/: capture.cpp  capture_utils.cpp  capture_utils.h  virtual_camera.cpp  virtual_camera.h  winrt_capture.h
detector/: detection_buffer.cpp  dml_detector.cpp  postProcess.cpp  trt_detector.cpp
docs/: build.md  config.md  guides.md
docs/plans/: 2025-12-12-capture-detector-performance.md  2025-12-12-mouse-antijitter-incremental.md
include/: other_tools.h
keyboard/: keycodes.cpp
modules/opencv/opencv_contrib-4.10.0/modules/cudalegacy/src/cuda/: NCVHaarObjectDetection.cu
modules/tools/: rgb_565_convert.py
mouse/: AimbotTarget.cpp  Kmbox_b.cpp  Kmbox_b.h  SerialConnection.cpp  SerialConnection.h  kmboxNetConnection.cpp  mouse.cpp  mouse.h
mouse/kmbox_net/: HidTable.h
overlay/: draw_ai.cpp  draw_buttons.cpp  draw_debug.cpp  draw_game_overlay.cpp  draw_game_overlay.h  draw_overlay.cpp  draw_settings.h  draw_target.cpp
sunone_aimbot_2/: sunone_aimbot_2.cpp  sunone_aimbot_2.h  sunone_aimbot_2.vcxproj  sunone_aimbot_2.vcxproj.filters
sunone_aimbot_2/capture/: capture.cpp  capture.h  capture_utils.cpp  duplication_api_capture.cpp  udp_capture.h  virtual_camera.h  winrt_capture.cpp
sunone_aimbot_2/config/: config.cpp  config.h
sunone_aimbot_2/depth/: depth_mask.cpp  depth_mask.h
sunone_aimbot_2/detector/: cuda_preprocess.cu  cuda_preprocess.h  dml_detector.cpp  dml_detector.h  postProcess.cpp  postProcess.h  trt_detector.cpp  trt_detector.h
sunone_aimbot_2/include/: aim_kalman.h  memory_images.h  other_tools.h
sunone_aimbot_2/keyboard/: keyboard_listener.cpp  keycodes.h
sunone_aimbot_2/mem/: gpu_resource_manager.cpp
sunone_aimbot_2/modules/makcu/include/: makcu.h  serialport.h
sunone_aimbot_2/modules/makcu/src/: makcu.cpp
sunone_aimbot_2/modules/tools/: base64_encode.py
sunone_aimbot_2/mouse/: AimbotTarget.cpp  AimbotTarget.h  Arduino.cpp  KmboxAConnection.cpp  Makcu.cpp  ghub.cpp  hid.c  hidapi.h  kmboxA.cpp  kmboxNetConnection.cpp  kmboxNetConnection.h  mouse.cpp  mouse.h
sunone_aimbot_2/mouse/kmbox_net/: kmboxNet.cpp  kmboxNet.h
sunone_aimbot_2/overlay/: Game_overlay.cpp  Game_overlay.h  config_dirty.cpp  crosshair_feature.cpp  draw_ai.cpp  draw_buttons.cpp  draw_capture.cpp  draw_debug.cpp  draw_depth.cpp  draw_game_overlay.cpp  draw_mouse.cpp  draw_overlay.cpp  draw_stats.cpp  draw_target.cpp  overlay.cpp  overlay.h
sunone_aimbot_2/runtime/: game_overlay_loop.cpp  mouse_thread_loop.cpp  thread_loops.h  thread_loops_shared.cpp
sunone_aimbot_2/scr/: data_collector.cpp  data_collector.h  other_tools.cpp
sunone_aimbot_2/tensorrt/: nvinf.cpp  nvinf.h
sunone_aimbot_cpp/: Package.appxmanifest  SerialConnection.cpp  SerialConnection.h  Snowflake.cpp  Snowflake.hpp  capture.cpp  config.cpp  config.h  config.ini  detector.cpp  detector.h  imgui.ini  keyboard_listener.cpp  keyboard_listener.h  keycodes.h  mouse.cpp  mouse.h  packages.config  sunone_aimbot_cpp.cpp  sunone_aimbot_cpp.h  sunone_aimbot_cpp.vcxproj  sunone_aimbot_cpp.vcxproj.filters  target.cpp  visuals.cpp
sunone_aimbot_cpp/capture/: capture.cpp  capture.h  capture_utils.cpp  capture_utils.h  duplication_api_capture.cpp  duplication_api_capture.h  gstreamer_capture.cpp  gstreamer_capture.h  optical_flow.cpp  optical_flow.h  udp_capture.cpp  udp_capture.h  virtual_camera.cpp  virtual_camera.h  winrt_capture.cpp  winrt_capture.h
sunone_aimbot_cpp/config/: config.cpp  config.h
sunone_aimbot_cpp/depth/: depth_anything_trt.cpp  depth_anything_trt.h  depth_mask.cpp  depth_mask.h  depth_utils.cpp  depth_utils.h
sunone_aimbot_cpp/detector/: cuda_preprocess.cu  cuda_preprocess.h  cuda_utils.h  detection_buffer.h  detector.cpp  detector.h  directml_detector.cpp  directml_detector.h  dml_detector.cpp  dml_detector.h  postProcess.cpp  postProcess.h  preprocess.cu  preprocess.h  trt_detector.cpp  trt_detector.h
sunone_aimbot_cpp/include/: SerialConnection.h  capture.h  config.h  detector.h  ghub.h  keycodes.h  memory_images.h  mouse.h  nvinf.h  other_tools.h  stealth.h  sunone_aimbot_cpp.h  visuals.h
sunone_aimbot_cpp/keyboard/: keyboard_listener.cpp  keyboard_listener.h
sunone_aimbot_cpp/mem/: cpu_affinity_manager.cpp  cpu_affinity_manager.h  gpu_resource_manager.cpp  gpu_resource_manager.h
sunone_aimbot_cpp/models/depth/: depth_anything_v2_vits_224.onnx
sunone_aimbot_cpp/modules/gstreamer/: example_stream.ps1
sunone_aimbot_cpp/modules/makcu/include/: makcu_c.h
sunone_aimbot_cpp/modules/makcu/src/: makcu.cpp  makcu_c.cpp  serialport.cpp
sunone_aimbot_cpp/modules/tools/: base64_encode.py  sunxds_models.json
sunone_aimbot_cpp/mouse/: AimbotTarget.cpp  AimbotTarget.h  Arduino.cpp  Arduino.h  InputMethod.h  KmboxAConnection.cpp  KmboxAConnection.h  KmboxConnection.cpp  KmboxConnection.h  Kmbox_b.cpp  Kmbox_b.h  Makcu.cpp  Makcu.h  SerialConnection.cpp  SerialConnection.h  ghub.cpp  ghub.h  ghub.rar  hid.c  kmboxA.cpp  kmboxA.h  kmboxNetConnection.cpp  kmboxNetConnection.h  mouse.cpp  mouse.h  target.h
sunone_aimbot_cpp/mouse/kmbox/: HidTable.h  kmboxNet.cpp  kmboxNet.h  my_enc.cpp  my_enc.h
sunone_aimbot_cpp/mouse/kmbox_net/: HidTable.h  picture.h
sunone_aimbot_cpp/overlay/: Game_overlay.cpp  Game_overlay.h  Snowflake.cpp  Snowflake.hpp  config_dirty.h  draw_ai.cpp  draw_buttons.cpp  draw_capture.cpp  draw_debug.cpp  draw_depth.cpp  draw_game_overlay.cpp  draw_mouse.cpp  draw_optical_flow.cpp  draw_overlay.cpp  draw_settings.h  draw_stats.cpp  draw_target.cpp  overlay.cpp  overlay.h  ui_sections.h  visuals.cpp  visuals.h
sunone_aimbot_cpp/scr/: SerialConnection.cpp  capture.cpp  config.cpp  detector.cpp  ghub.cpp  keyboard_listener.cpp  keycodes.cpp  mouse.cpp  nvinf.cpp  other_tools.cpp  overlay.cpp  stealth.cpp  sunone_aimbot_cpp.cpp  target.cpp  visuals.cpp
sunone_aimbot_cpp/tensorrt/: nvinf.cpp  nvinf.h  trt_monitor.h
tensorrt/: nvinf.cpp
tools/: build_opencv_cuda.ps1  setup_opencv_dml.ps1
(+1 files in other folders)
